Closed Bug 846144 Opened 13 years ago Closed 13 years ago

border-radius not respected on element with background-image: url(), background-size 100%, and at least one transform set.

Categories

(Core :: Layout, defect)

21 Branch
x86_64
Windows 8
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla22
Tracking Status
firefox20 --- unaffected
firefox21 + fixed
firefox22 + fixed
b2g18 --- fixed

People

(Reporter: prodigysim, Assigned: mattwoodrow)

References

Details

(Keywords: regression, testcase)

Attachments

(2 files)

Attached file Test Case HTML
User Agent: Mozilla/5.0 (Windows NT 6.2; WOW64; rv:21.0) Gecko/20130226 Firefox/21.0 Build ID: 20130226042022 Steps to reproduce: See attached file for a test case. Create an element with the following: 1. Non-zero border-radius with no border (width/style/etc) 2. Background-image in use with a "url()" based value 3. background-size set to "cover", "contain", or "100% [100%]" 4. transform set to any value other than "none". Tested with "scale(1)", "rotate(0deg)", and "translate(0,0)" Actual results: When all of these conditions are met, the border-radius setting is not respected in FF21. Remove the background-size setting or the transform and the issue disappears--as demonstrated in the first two elements in the attached test case. The last element in the test case, which has all the conditions met, gets rendered as a square instead of as a circle. Expected results: Element should be rendered as a circle (respecting border-radius). In my test case, previous versions of firefox (19/20 tested, windows) rendered all three elements as circles.
Attachment #719294 - Attachment mime type: text/plain → text/html
Last good nightly: 2013-02-14 First bad nightly: 2013-02-15 Pushlog: http://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=aceeea086ccb&tochange=953b1db7a246
Keywords: regression, testcase
Reduced range: Last good inbound: 55a453689fb1 First bad inbound: 6b975147c015 Pushlog: http://hg.mozilla.org/integration/mozilla-inbound/pushloghtml?fromchange=55a453689fb1&tochange=6b975147c015
Blocks: 815591
Status: UNCONFIRMED → NEW
Component: Untriaged → Layout
Ever confirmed: true
Product: Firefox → Core
Status: NEW → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla22
Assignee: nobody → matt.woodrow
Comment on attachment 719378 [details] [diff] [review] Don't optimize images to an ImageLayer if they have border-radius clipping [Approval Request Comment] Bug caused by (feature/regressing bug #): Bug 815591 User impact if declined: Incorrect background clipping in some cases Testing completed (on m-c, etc.): Been on m-c for a few days Risk to taking this patch (and alternatives if risky): Very low risk, just skips the GPU optimized path (and falls back to the regular code path) in situations where the GPU path can't draw the background correctly. String or UUID changes made by this patch: None
Attachment #719378 - Flags: approval-mozilla-aurora?
Comment on attachment 719378 [details] [diff] [review] Don't optimize images to an ImageLayer if they have border-radius clipping Approving uplift of a low risk patch, fixing a Fx21 regression.
Attachment #719378 - Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Flags: in-testsuite?
Comment on attachment 719378 [details] [diff] [review] Don't optimize images to an ImageLayer if they have border-radius clipping NOTE: Please see https://wiki.mozilla.org/Release_Management/B2G_Landing to better understand the B2G approval process and landings. [Approval Request Comment] Bug caused by (feature/regressing bug #): none User impact if declined: see bug 815591 Testing completed: landed on central for a while Risk to taking this patch (and alternatives if risky): see bug 815591 String or UUID changes made by this patch: none
Attachment #719378 - Flags: approval-mozilla-b2g18?
Attachment #719378 - Flags: approval-mozilla-b2g18? → approval-mozilla-b2g18+
Backed out for reftest failures. And a reminder, the tree rules still state that people who push to release branches are expected to watch and star their pushes... https://hg.mozilla.org/releases/mozilla-b2g18/rev/7508c5a1026b
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:21.0) Gecko/20100101 Firefox/21.0 Verified on Firefox 21.0b5, on Windows 7, 64 bits using the provided testcase.
Maria, can you confirm that you were able to reproduce this bug on an older build? Specifically the Nightly from 2013-02-15 should reproduce this bug. I ask because the bug was reported against Windows 8 and you are testing on Windows 7.
I'm sorry, I didn't see it was specifically for Windows 8.
I downloaded the Nightly from 2013-02-05 and tested this bug there, for completeness: nope, I'm not able to reproduce it there. Sorry again for the mistake!
It's okay, thanks for following up.
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: