Bug 846144 - Don't optimize backgrounds to an ImageLayer if they have border-radius clipping. r=roc,a=akeybl